tests/correctness/reject/unknown_method.keel
def main(sys: System); Io:
    x = 5
    println(x.nonexistent_method())
